# redcurrant-librain

./: CMakeLists.txt  LICENSE  README.md  librain.c  librain.h  project.config  test_librain.c  test_librain_legacy.c  test_utils.h  utils.c  utils.h
jerasure/: README.md  jerasure.c  jerasure.h
test/: compile.sh  plan.txt  test.c
